--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ body {
     border-radius: 10vh;
     width: 13vh;
     height: 13vh;
-    transform: translateZ(-2px);
+    transform: translateZ(-5px);
     background-color: lightgoldenrodyellow;
 }
 
@@ -57,7 +57,7 @@ body {
     padding: 2vh;
 }
 .window {
-    flex: 0 1 3vh;
+    flex: 0 1 auto;
     position: relative;
 }
 .window:before {
@@ -78,6 +78,10 @@ body {
 
 .window img {
     max-width: 15vh;
+    max-height: 25vh;
+    /* outline: 10px solid rgba(0, 0, 0, .75); */
+    /* outline-offset: -10px; */
+    /* background-color: black; */
 }
 
 .house1 {
