--- a/clouds.css
+++ b/clouds.css
@@ -5,6 +5,7 @@
   position: absolute;
   width: 30vh;
   fill: white;
+  fill-opacity: 0.9;
 }
 .cloud:nth-of-type(1) {
     left: 10vh;
@@ -23,8 +24,24 @@
     top: 15vh;
 }
 .cloud:nth-of-type(5) {
-    left: 100vh;
+    left: 130vh;
+    top: 0vh;
+}
+.cloud:nth-of-type(6) {
+    left: 170vh;
+    top: 0vh;
+}
+.cloud:nth-of-type(7) {
+    left: 220vh;
     top: 10vh;
+}
+.cloud:nth-of-type(8) {
+    left: 270vh;
+    top: -10vh;
+}
+.cloud:nth-of-type(9) {
+    left: 270vh;
+    top: -7vh;
 }
 
 .cloud.front {
