--- a/main.css
+++ b/main.css
@@ -6,16 +6,29 @@ body {
 body {
     margin: 0;
     background-color: darkgrey;
+    /* background-image: url("images/background.png"); */
 }
 
 .wrapper {
-    position: relative;
+    /* position: relative; */
     perspective: 5px;
     overflow-x: scroll;
     overflow-y: hidden;
     transform-style: preserve-3d;
     height: 100vh;
-    width: 100%;
+    /* width: 100%; */
+}
+
+.nightBackground {
+    position: absolute;
+    top: -100vh;
+    left: -100vh;
+    right: 0;
+    bottom: 0;
+    min-height: 300vh;
+    /* width: 100wh; */
+    /* width: 100%; */
+    transform: translateZ(-10px);
 }
 
 .moon {
@@ -25,9 +38,12 @@ body {
     border-radius: 10vh;
     width: 13vh;
     height: 13vh;
+    opacity: 0.2;
     transform: translateZ(-5px);
     background-color: lightgoldenrodyellow;
 }
+
+.moon {}
 
 .houseContainer {
     position: absolute;
